# api-web-mining-ds

./: .env.example  .gitattributes  .gitignore  APi with pandas . py  Import Request Details . ipynb  LICENSE  README.md  Source_for_learning.Source  Start.md  Theory.md  api-to-dataframe.py  basic-import.py  data-mining.py  json_pharsing.py  pipelining.api  pyproject.toml  requirements.txt  save as csv files.py
Api/Fast Api/: 01_basics.py  02_models_validation.py  03_async_dependencies.py  04_recursive_function.py  QUICKSTART.md  README.md  main.py
Api/pythons api/: config.py  database.py  main.py  routes.py  utils.py
Grok/: 01.m  01_json_api_posts_miner.py  02_paginated_api_comments_miner.py  04_link_graph_miner.py  07_robots_policy_checker.py  08_async_hackernews_miner.py  10_page_change_miner.py
Grok/api_web_mining_ds/: scraper.py  storage.py
Grok/docs/: 02_web_mining_workflow.md
Grok/examples/: 04_end_to_end_pipeline.py
Grok/tests/: test_http_client.py  test_storage_pipeline.py
Introduction/: 01_json_api_posts_miner.py  03_books_catalog_scraper.py  05_html_table_miner.py  06_quotes_text_miner.py  09_sitemap_url_miner.py  learning_apis_in_python.md
Introduction/Running currently/: __init__.py  normalize.py  (+1 more)
docs/: 01_api_fundamentals.md  03_data_pipeline_project.md  04_expansion_roadmap.md
examples/: 01_fetch_jsonplaceholder.py  02_weather_open_meteo.py  03_scrape_static_html.py  04_end_to_end_pipeline.py
node-app/: pipeline.py
tests/: test_http_client.py  test_normalize.py  test_profile_text_async_cli.py  test_scraper.py  test_storage_pipeline.py
(+11 files in other folders)
