[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-web-mining-ds"
version = "0.1.0"
description = "Practical API and web mining course utilities for Python data science."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sanjog Wiz" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "lxml>=5.0",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  "requests>=2.32"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
api-web-mine = "api_web_mining_ds.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
